--- a/app.json
+++ b/app.json
@@ -23,13 +23,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.supera.ecommercegames"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "packagerOpts": {
-      "config": "metro.config.js",
       "sourceExts": [
         "expo.ts",
         "expo.tsx",
